syntax = "proto3";

package skyclust.provider.v1;

option go_package = "skyclust/api/proto/v1;providerv1";

import "google/protobuf/timestamp.proto";

// TerraformService defines the gRPC service for Terraform operations
service TerraformService {
  // Terraform Workflow
  rpc Init(InitRequest) returns (InitResponse);
  rpc Plan(PlanRequest) returns (PlanResponse);
  rpc Apply(ApplyRequest) returns (ApplyResponse);
  rpc Destroy(DestroyRequest) returns (DestroyResponse);
  rpc Validate(ValidateRequest) returns (ValidateResponse);
  
  // State Management
  rpc GetState(GetStateRequest) returns (GetStateResponse);
  rpc ListStates(ListStatesRequest) returns (ListStatesResponse);
  rpc LockState(LockStateRequest) returns (LockStateResponse);
  rpc UnlockState(UnlockStateRequest) returns (UnlockStateResponse);
  
  // Resource Management
  rpc ListResources(ListResourcesRequest) returns (ListResourcesResponse);
  rpc GetResource(GetResourceRequest) returns (GetResourceResponse);
  rpc TaintResource(TaintResourceRequest) returns (TaintResourceResponse);
  rpc UntaintResource(UntaintResourceRequest) returns (UntaintResourceResponse);
  
  // Module Management
  rpc UploadModule(UploadModuleRequest) returns (UploadModuleResponse);
  rpc ListModules(ListModulesRequest) returns (ListModulesResponse);
  rpc GetModule(GetModuleRequest) returns (GetModuleResponse);
  rpc DeleteModule(DeleteModuleRequest) returns (DeleteModuleResponse);
  
  // Output Management
  rpc GetOutputs(GetOutputsRequest) returns (GetOutputsResponse);
  
  // Execution Status
  rpc GetExecutionStatus(GetExecutionStatusRequest) returns (GetExecutionStatusResponse);
  rpc CancelExecution(CancelExecutionRequest) returns (CancelExecutionResponse);
}

// Init Messages
message InitRequest {
  string workspace_id = 1;
  string provider = 2;
  string region = 3;
  map<string, string> backend_config = 4;
}

message InitResponse {
  bool success = 1;
  string message = 2;
  repeated string providers_initialized = 3;
}

// Plan Messages
message PlanRequest {
  string workspace_id = 1;
  string provider = 2;
  string region = 3;
  string configuration = 4; // HCL or JSON configuration
  map<string, string> variables = 5;
  bool destroy = 6;
}

message PlanResponse {
  string plan_id = 1;
  bool success = 2;
  string message = 3;
  PlanSummary summary = 4;
  string plan_output = 5;
}

message PlanSummary {
  int32 resources_to_add = 1;
  int32 resources_to_change = 2;
  int32 resources_to_destroy = 3;
  repeated ResourceChange changes = 4;
}

message ResourceChange {
  string address = 1;
  string type = 2;
  string action = 3; // "create", "update", "delete", "replace"
  map<string, string> before = 4;
  map<string, string> after = 5;
}

// Apply Messages
message ApplyRequest {
  string workspace_id = 1;
  string plan_id = 2;
  bool auto_approve = 3;
  int32 parallelism = 4;
}

message ApplyResponse {
  string execution_id = 1;
  bool success = 2;
  string message = 3;
  ApplySummary summary = 4;
  repeated TerraformOutput outputs = 5;
}

message ApplySummary {
  int32 resources_created = 1;
  int32 resources_updated = 2;
  int32 resources_destroyed = 3;
  google.protobuf.Timestamp started_at = 4;
  google.protobuf.Timestamp completed_at = 5;
  int32 duration_seconds = 6;
}

// Destroy Messages
message DestroyRequest {
  string workspace_id = 1;
  bool auto_approve = 2;
  repeated string target_resources = 3;
}

message DestroyResponse {
  string execution_id = 1;
  bool success = 2;
  string message = 3;
  int32 resources_destroyed = 4;
}

// Validate Messages
message ValidateRequest {
  string workspace_id = 1;
  string configuration = 2;
}

message ValidateResponse {
  bool valid = 1;
  repeated ValidationError errors = 2;
  repeated ValidationWarning warnings = 3;
}

message ValidationError {
  string message = 1;
  string file = 2;
  int32 line = 3;
  int32 column = 4;
}

message ValidationWarning {
  string message = 1;
  string file = 2;
}

// State Management Messages
message GetStateRequest {
  string workspace_id = 1;
}

message GetStateResponse {
  TerraformState state = 1;
}

message ListStatesRequest {
  string workspace_id = 1;
}

message ListStatesResponse {
  repeated TerraformState states = 1;
}

message LockStateRequest {
  string workspace_id = 1;
  string lock_id = 2;
}

message LockStateResponse {
  bool success = 1;
  string message = 2;
}

message UnlockStateRequest {
  string workspace_id = 1;
  string lock_id = 2;
}

message UnlockStateResponse {
  bool success = 1;
  string message = 2;
}

message TerraformState {
  string version = 1;
  string terraform_version = 2;
  int32 serial = 3;
  string lineage = 4;
  repeated TerraformResource resources = 5;
  repeated TerraformOutput outputs = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// Resource Management Messages
message ListResourcesRequest {
  string workspace_id = 1;
  string resource_type = 2;
  map<string, string> filters = 3;
}

message ListResourcesResponse {
  repeated TerraformResource resources = 1;
}

message GetResourceRequest {
  string workspace_id = 1;
  string resource_address = 2;
}

message GetResourceResponse {
  TerraformResource resource = 1;
}

message TaintResourceRequest {
  string workspace_id = 1;
  string resource_address = 2;
}

message TaintResourceResponse {
  bool success = 1;
  string message = 2;
}

message UntaintResourceRequest {
  string workspace_id = 1;
  string resource_address = 2;
}

message UntaintResourceResponse {
  bool success = 1;
  string message = 2;
}

message TerraformResource {
  string address = 1;
  string type = 2;
  string name = 3;
  string provider = 4;
  string mode = 5; // "managed" or "data"
  map<string, string> attributes = 6;
  repeated string depends_on = 7;
  bool tainted = 8;
}

// Module Management Messages
message UploadModuleRequest {
  string module_name = 1;
  string version = 2;
  bytes content = 3; // Tar.gz or Zip
  string provider = 4;
}

message UploadModuleResponse {
  string module_id = 1;
  bool success = 2;
  string message = 3;
}

message ListModulesRequest {
  string provider = 1;
  map<string, string> filters = 2;
}

message ListModulesResponse {
  repeated TerraformModule modules = 1;
}

message GetModuleRequest {
  string module_id = 1;
}

message GetModuleResponse {
  TerraformModule module = 1;
}

message DeleteModuleRequest {
  string module_id = 1;
}

message DeleteModuleResponse {
  bool success = 1;
  string message = 2;
}

message TerraformModule {
  string id = 1;
  string name = 2;
  string version = 3;
  string provider = 4;
  string description = 5;
  string source_url = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// Output Management Messages
message GetOutputsRequest {
  string workspace_id = 1;
}

message GetOutputsResponse {
  repeated TerraformOutput outputs = 1;
}

message TerraformOutput {
  string name = 1;
  string value = 2;
  string type = 3;
  bool sensitive = 4;
}

// Execution Status Messages
message GetExecutionStatusRequest {
  string execution_id = 1;
}

message GetExecutionStatusResponse {
  string execution_id = 1;
  string status = 2; // "pending", "running", "completed", "failed", "cancelled"
  string operation = 3; // "plan", "apply", "destroy"
  int32 progress_percentage = 4;
  string current_action = 5;
  google.protobuf.Timestamp started_at = 6;
  google.protobuf.Timestamp completed_at = 7;
  repeated string logs = 8;
}

message CancelExecutionRequest {
  string execution_id = 1;
}

message CancelExecutionResponse {
  bool success = 1;
  string message = 2;
}

